implemented getAll and createPerson
